Resolved readability issues. Added additional styling to resume for desktop and mobile devices.

--- a/stylesheets/mainStylesheet.css
+++ b/stylesheets/mainStylesheet.css
@@ -119,14 +119,13 @@ a {
 hr {
     width: 80%;
     margin: 20px auto;
-    border: 1px solid white;
+    border: 1px solid #FF9C33;
 }
 
 /* Section styling */
 section {
     min-height: 100vh;
     max-width: 87vw;
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -157,7 +156,7 @@ section h3 {
 }
 
 section h4 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: lighter;
     text-align: center;
     margin: 14px;
@@ -235,14 +234,15 @@ footer {
 .portfolioCardContainer {
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
     margin: 10px;
     padding: 40px;
     min-height: 300px;
     border: 2px solid white;
     border-radius: 4px;
     cursor: pointer;
+    background-color: rgba(5, 58, 143, 0.5);
 }
 
 .portfolioCardContainer:hover {
@@ -302,6 +302,7 @@ footer {
     padding: 40px 0;
     border: 2px solid white;
     border-radius: 4px;
+    background-color: rgba(5, 58, 143, 0.5);
 }
 
 /* Professional Summary */
@@ -470,6 +471,10 @@ ul.smallCardContainer li {
         margin: 24px 24px 0 24px;
     }
 
+    div.mobileGridTemplate hr {
+        display: none;
+    }
+
     div.mobileGridCardContainer {
         border: 2px solid white;
         border-radius: 4px;
@@ -636,10 +641,16 @@ ul.smallCardContainer li {
         grid-template-columns: repeat(2,1fr);
         margin: 24px 24px 0 24px;
     }
+
+    div.mobileGridTemplate hr {
+        display: none;
+    }
+
     div.mobileGridCardContainer {
         border: 2px solid white;
         border-radius: 4px;
     }
+
     div.mobileGridCardContainer ul.smallCardContainer {
         margin: 24px auto;
     }
